# TransparentDepthCompletion

./: .gitignore  LICENSE  README.md  batch_run_test.sh  environment.yml  main.py  run_efusion.sh
PersudoSLAM/: CMakeLists.txt  MainController.cpp
PersudoSLAM/Core/: CMakeLists.txt
PersudoSLAM/Core/Cuda/containers/: device_memory.cpp
PersudoSLAM/Core/Utils/: Parse.h
PersudoSLAM/Tools/: GUI.h  RawLogReader.cpp  RawLogReader.h
cfg/: model_zoo.py
cfg/datasets/: BlenderGlass_dataset.py  BlenderGlass_datasetv2.py  RealTime_dataset.py  TransCG_dataset.py  cleargrasp_dataset.py
experiments/: df_L50.yml  dfnet_L50.yml  dfnet_pt.yml  dfnet_pt_L50.yml  dfnet_pt_no_trajectory.yml  dfnet_pt_rf.yml  dfnet_pt_sn.yml  dfnet_pt_sn2.yml  dfnet_pt_sn3.yml  dfnet_pt_sn_val.yml  dfnet_pt_sobel.yml  dfv2.yml  dfv2_2.yml  run_elasticfusion.py  sn_loss_test.py  swin_pt_spade_norm_refine2.yml  swin_pt_spade_norm_refine3.yml  swin_pt_spade_refine1.yml  test_CD.py  test_L.py  test_cleargrasp.yml  test_cleargrasp_spec.py  test_glass.py  test_windows.py
model/: cons_net.py  df_net.py  grnet.py  pointnet.py  resnet.py  rgb_net.py  swin_transformer_net.py  unet_2d.py  unet_3d.py  vdcnet.py
model/DM_LRN/: blocks.py  dm_lrn.py  efficientnet.py  spade.py
model/Swin/: build.py  swin_builder.py  swin_t.py  swin_transformer_net.py  transformer_net.py
rgbd_ptam/: dataset.py  params.py  ptam.py  viewer.py
test/: fk_login.py  gt_trajectory.txt  rot2rq.py  script.py  test_recon.py  vis_error_depth.py
train/: consistency_loss.py  df_trainer.py  metrics.py  sobel_grad_loss.py  trainer.py
utils/: ckpt2script.py  cnn_slam.py  config_loader.py  data_augmentation.py  exr_handler.py  global_pose_optimaztion.py  icp.py  inverse_warp.py  keyframe_utils.py  mesh_visualization.py  meter.py  normal2depth.py  photometric_loss.py  png2klg.py  rgbd2pcd.py  visualize.py  vn_photometric_loss.py
